force-app/main/default/objects/QA_Design_Version__c/QA_Design_Version__c.object-meta.xml
<CustomObject>
    <label>QA Design Version</label>
    <nameField>
        <label>QA Design Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Design Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>