force-app/main/default/objects/QA_Design_Version__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>TEXT(QA_Design__r.Department__c)</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>