force-app/main/default/objects/QA_Design_Version__c/fields/QA_Design__c.field-meta.xml
<CustomField>
    <fullName>QA_Design__c</fullName>
    <label>QA Design</label>
    <referenceTo>QA_Design__c</referenceTo>
    <relationshipLabel>QA Design Versions</relationshipLabel>
    <relationshipName>QA_Design_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>