force-app/main/default/objects/QA_Design_Version__c/fields/QA_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Type__c</fullName>
    <formula>TEXT(QA_Design__r.QA_Type__c)</formula>
    <label>QA Type</label>
    <type>Text</type>
</CustomField>