force-app/main/default/objects/QA_Design_Version__c/fields/Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Question_Count__c</fullName>
    <description>Number of questions this design will generate</description>
    <inlineHelpText>Count of related question info</inlineHelpText>
    <label>Question Count</label>
    <summaryForeignKey>QA_Question_Info__c.QA_Design__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>