force-app/main/default/objects/QA_Design_Version__c/fields/Total_Question_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Question_Value__c</fullName>
    <inlineHelpText>Must = 100 for activation</inlineHelpText>
    <label>Total Question Value</label>
    <summarizedField>QA_Question_Info__c.Score_Value__c</summarizedField>
    <summaryForeignKey>QA_Question_Info__c.QA_Design__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>