force-app/main/default/objects/QA_Design_Version__c/validationRules/Cannot_Reactivate.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reactivate</fullName>
    <active>true</active>
    <description>Block design versions from being reactivated</description>
    <errorConditionFormula>isActive__c 
&amp;&amp;
 NOT(ISNULL(Deactivation_Date__c))</errorConditionFormula>
    <errorMessage>Cannot reactivate this version!  Please create a new version instead</errorMessage>
</ValidationRule>