force-app/main/default/objects/QA_Design_Version__c/validationRules/Need_Department_to_Activate.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Department_to_Activate</fullName>
    <active>true</active>
    <description>Department can&apos;t be blank when activating a QA Design</description>
    <errorConditionFormula>ISBLANK(Department__c)
&amp;&amp;
isActive__c</errorConditionFormula>
    <errorMessage>Department must be entered before activation</errorMessage>
</ValidationRule>