force-app/main/default/objects/QA_Design_Version__c/validationRules/Need_Type_to_Activate.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Type_to_Activate</fullName>
    <active>true</active>
    <description>Design needs qa type to be active</description>
    <errorConditionFormula>ISBLANK(QA_Type__c)
&amp;&amp;
isActive__c</errorConditionFormula>
    <errorMessage>QA Type must be entered before activation</errorMessage>
</ValidationRule>