force-app/main/default/objects/QA_Design_Version__c/validationRules/Prevent_Date_Removal.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Date_Removal</fullName>
    <active>true</active>
    <description>Activation and Deactivation dates cannot be removed once entered</description>
    <errorConditionFormula>(ISCHANGED(Activation_Date__c)
&amp;&amp;
NOT(ISNULL(PRIORVALUE(Activation_Date__c))))
||
(ISCHANGED(Deactivation_Date__c)
&amp;&amp;
NOT(ISNULL(PRIORVALUE(Deactivation_Date__c))))</errorConditionFormula>
    <errorMessage>You cannot modify activation or deactivation dates once entered</errorMessage>
</ValidationRule>