force-app/main/default/objects/QA_Design_Version__c/validationRules/Total_100_Before_Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_100_Before_Activation</fullName>
    <active>true</active>
    <description>The total value of the QA design must add up to 100 before activation</description>
    <errorConditionFormula>Total_Question_Value__c != 1
&amp;&amp;
isActive__c</errorConditionFormula>
    <errorMessage>Total value of design must equal 100% to activate</errorMessage>
</ValidationRule>